--- a/upgrade.yml
+++ b/upgrade.yml
@@ -1,4 +1,8 @@
-- name: Upgrade all packages to the latest version
-  apt:
-    name: "*"
-    state: latest
+- hosts: all
+  become: yes
+  tasks:
+  - name: Upgrade all packages to the latest version
+    apt:
+      update_cache: yes
+      name: "*"
+      state: latest
