serve mattermost through traefik

--- a/roles/mattermost/tasks/main.yml
+++ b/roles/mattermost/tasks/main.yml
@@ -40,13 +40,22 @@
     dest: /opt/mattermost-docker
     force: yes
     version: "5.29.1"
+
 - name: setup compose.yml
   copy:
     content: |
-      version: "2"
+      version: '3.3'
+      networks:
+        mattermost-internal:
+          internal: true
+        mattermost-out:
+          internal: false
       services:
         db:
+          networks:
+            - mattermost-internal
           build: db
+          container_name: 'mattermost-db'
           read_only: true
           restart: unless-stopped
           volumes:
@@ -57,6 +66,10 @@
             - POSTGRES_PASSWORD={{ ansible_local['mattermost']['db']['pw'] }}
             - POSTGRES_DB=mattermost
         app:
+          networks:
+            - mattermost-out
+            - mattermost-internal
+          container_name: 'mattermost-app'
           build:
             context: app
             args:
@@ -73,15 +86,11 @@
             - MM_USERNAME=mmuser
             - MM_PASSWORD={{ ansible_local['mattermost']['db']['pw'] }}
             - MM_DBNAME=mattermost
-        web:
-          build: web
-          ports:
-            - "80:80"
-            - "443:443"
-          read_only: true
-          restart: unless-stopped
-          volumes:
-            - /etc/localtime:/etc/localtime:ro
+          labels:
+            - "traefik.enable=true"
+            - "traefik.docker.network=mattermost_mattermost-out"
+            - "traefik.http.routers.mattermost-app.rule=Host(`parley.prl.fit.cvut.cz`)"
+            - "traefik.http.routers.mattermost-app.entrypoints=web"
     dest: /opt/mattermost-docker/docker-compose.yml
 
 - name: Docker Compose Mattermost
