fix some variables

--- a/site.yml
+++ b/site.yml
@@ -38,6 +38,9 @@
 
 - hosts: communications
   remote_user: root
+  vars:
+    traefik_dir: /var/www/traefik
+    acme_email: acme_prl@o1o.ch
   roles:
     - docker
     - traefik
