--- a/roles/mattermost/tasks/main.yml
+++ b/roles/mattermost/tasks/main.yml
@@ -126,10 +126,18 @@
 
 - name: Create volume directory if it does not exist
   ansible.builtin.file:
-    path: /opt/volumes/app/matterbridge
+    path: /opt/volumes/matterbridge
     state: directory
-    mode: '0700'
+    mode: '0440'
     owner: 3300
+    group: 3300
+
+- name: Ensures empty config exists
+  file:
+    path: "/opt/volumes/matterbridge/matterbridge.toml"
+    state: touch
+    mode: 0640
+    owner: root
     group: 3300
 
 - name: Matterbridge
