--- a/roles/simple_monitoring/tasks/main.yml
+++ b/roles/simple_monitoring/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Create volume directory if it does not exist
   ansible.builtin.file:
-    path: /opt/volumes/app/prometheus/{{item}}
+    path: /opt/volumes/prometheus/{{item}}
     state: directory
     mode: '0700'
     owner: 3301
@@ -10,7 +10,7 @@
     - config
 - name: Create volume directory if it does not exist
   ansible.builtin.file:
-    path: /opt/volumes/app/grafana/{{item}}
+    path: /opt/volumes/grafana/{{item}}
     state: directory
     mode: '0700'
     owner: 3302
@@ -33,8 +33,8 @@
           scrape_interval: 120s
           static_configs:
             - targets: ['localhost:9090','cadvisor:8080','node-exporter:9100']
-    dest: /opt/volumes/app/prometheus/config/prometheus.yml
-    mode: '0744'
+    dest: /opt/volumes/prometheus/config/prometheus.yml
+    mode: '0644'
     owner: root
     group: root
 
@@ -57,8 +57,8 @@
           user: "3301:3301"
           restart: unless-stopped
           volumes:
-            - /opt/volumes/app/prometheus/config:/etc/prometheus/
-            - /opt/volumes/app/prometheus/data:/prometheus
+            - /opt/volumes/prometheus/config:/etc/prometheus/
+            - /opt/volumes/prometheus/data:/prometheus
           command:
             - '--config.file=/etc/prometheus/prometheus.yml'
             - '--storage.tsdb.path=/prometheus'
@@ -103,7 +103,7 @@
             - traefik
             - monitoring-internal
           volumes:
-            - /opt/volumes/app/grafana/data:/var/lib/grafana
+            - /opt/volumes/grafana/data:/var/lib/grafana
           environment:
             - GF_USERS_ALLOW_SIGN_UP=false
           labels:
