--- a/roles/simple_monitoring/tasks/main.yml
+++ b/roles/simple_monitoring/tasks/main.yml
@@ -32,7 +32,7 @@
         - job_name: 'prometheus'
           scrape_interval: 120s
           static_configs:
-            - targets: ['localhost:9090','cadvisor:8080','node-exporter:9100']
+            - targets: ['localhost:9090','cadvisor:8080','node-exporter:9100','traefik:9090']
     dest: /opt/volumes/prometheus/config/prometheus.yml
     mode: '0644'
     owner: root
@@ -66,6 +66,7 @@
             - 9090:9090
           networks:
             - monitoring-internal
+            - traefik
         node-exporter:
           image: quay.io/prometheus/node-exporter:latest
           container_name: monitoring_node_exporter
