--- a/site.yml
+++ b/site.yml
@@ -36,14 +36,14 @@
     - r-base
     - scala
 
-- hosts: communications
-  remote_user: root
-  vars:
-    traefik_dir: /var/www/traefik
-    acme_email: acme_prl@o1o.ch
-  roles:
-    - docker
-    - traefik
-    - mattermost
-    - watchtower
-    - simple_monitoring
+#- hosts: communications
+#  remote_user: root
+#  vars:
+#    traefik_dir: /var/www/traefik
+#    acme_email: acme_prl@o1o.ch
+#  roles:
+#    - docker
+#    - traefik
+#    - mattermost
+#    - watchtower
+#    - simple_monitoring
