--- a/roles/gitlab_runner/tasks/main.yml
+++ b/roles/gitlab_runner/tasks/main.yml
@@ -10,9 +10,9 @@
     update_cache: yes
     name: gitlab-runner
     state: latest
-- apt:
-    name: python-gitlab
-    state: latest
+# - apt:
+#     name: python-gitlab
+#     state: latest
 # For some reason that does not work
 # - name: "Register rvm runner"
 #   gitlab_runner:
