--- a/roles/gitlab_runner/tasks/main.yml
+++ b/roles/gitlab_runner/tasks/main.yml
@@ -4,9 +4,9 @@
     update_cache: no
     state: present
 - apt_key:
-    tag: apt-key
     url: https://packages.gitlab.com/runner/gitlab-runner/gpgkey
     state: present
+  tags: apt-key
 - apt:
     update_cache: yes
     name: gitlab-runner
